<resources>
    <string name="app_name">InClass07In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="Phone_label">Phone:</string>
    <string name="phone_type_label">Phone Type:</string>
    <string name="id_label">ID:</string>

    <string name="delete_btn">Delete</string>
    <string name="update_btn">Update</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_btn">Add</string>
    <string name="submit_btn">Submit</string>

    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="phone_type_hint">Phone type</string>

    <string name="delete_success">Contact deleted!!!</string>
    <string name="delete_failed">Delete failed, Contact may be stalled. Please retry again!!</string>
    <string name="create_failed">Creation Failed</string>
    <string name="create_success">Creation Success</string>
    <string name="update_failed">Update Failed</string>
    <string name="update_success">Update Success</string>
    <string name="error_name">Enter a valid Name</string>
    <string name="error_email">Enter a valid Email</string>
    <string name="error_phone">Enter a valid Phone</string>
    <string name="error_type">Enter a valid Phone Type: CELL, OFFICE or HOME</string>
</resources>